--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "compilerOptions" : "CommomJS",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon dist/index.js",
     "start": "node ./src/index.ts"
   },
   "keywords": [],
